# solana

./: .fedepriv.swp  .gitignore  coso.js  fedepriv  index.html  mangaso.js  package.json  send_empty_transaction.js  send_transfer_transaction.js  webpack.config.js
test1/: asd.js
test2/: index.js  package-lock.json
test3/: Cargo.toml  package-lock.json  package.json
test3/frontend/: index.js  main.js  webpack.config.js
test3/src/: entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs
test4/: Cargo.toml  package-lock.json  package.json
test4/js/: index.js  package-lock.json  package.json
test4/rust/: Cargo.toml
test4/src/: lib.rs  main.rs
test4/tests/: fede.rs
test5/: create_nft.js  id1.json  id2.json  id3.json  index.js  mint_nft.js  package-lock.json  package.json  read.js
test6/: README.md  asd.js  creator.json  index.html  index.js  index.min.js  package-lock.json  package.json  uri_map.json  webpack.config.js
test6/app/: exchange_nft.js  instructions.json  package-lock.json  purchase_nft.js  purchase_reward.js
test6/candymachine/: .candy_machine_v1_idl.json.swp  candy_machine_v1_idl.json  create_candy_machine.js  exec_ts.js  forget_candy_machine.js  id813181.json  load_candy_machine_program.js  mint_candy_machine_nft.js  package-lock.json  package.json  print_candy_machine_idl.js  sign_all_candy_machine.js
test6/metaplex/: get_master_edition_address.js  get_metadata.js  get_metadata_address.js  js.js  package-lock.json  (+1 more)
test6/rust/: Cargo.toml
test6/rust/src/: allowance.rs  entrypoint.rs  functions.rs  lib.rs  processor.rs
(+66 files in other folders)
