[package]
name = "test4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.6.9"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
spl-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.3", features = ["no-entrypoint"] }
borsh = { version = "0.9.1" }
bs58 = { version = "0.4.0" }

[lib]
crate-type = ["cdylib", "lib"]
name = "test4"
